--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,26 @@
 spring.datasource.url=jdbc:postgresql://localhost/spring-security
 spring.datasource.username=postgres
 spring.datasource.password=o09191995
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.baseline-on-migrate = true
 
+spring.jpa,properties.hibernate.jdbc.log.non_contextual_creation=true
+
+spring.jpa.open-in-view=true
+
+spring.freemarker.servlet.expose-request-attributes=true
 spring.mustache.servlet.expose-request-attributes=true
+spring.thymeleaf.enabled=true
+
+upload.path=D:/uploads
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=springrequest
+spring.mail.password=o09191995
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.starttls.enable=true
+mail.debug=true
