--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,14 @@ spring.datasource.url=jdbc:postgresql://localhost/spring-security
 spring.datasource.username=postgres
 spring.datasource.password=o09191995
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.baseline-on-migrate = true
 
-spring.jpa,properties.hibernate.jdbc.log.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.log.non_contextual_creation=true
 
 spring.jpa.open-in-view=true
 
-spring.freemarker.servlet.expose-request-attributes=true
 spring.mustache.servlet.expose-request-attributes=true
 spring.thymeleaf.enabled=true
 
