--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ upload.path=D:/uploads
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
-spring.mail.username=springrequest
-spring.mail.password=o09191995
+spring.mail.username=mail
+spring.mail.password=12345678
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtps.auth=true
 spring.mail.properties.mail.smtps.starttls.enable=true
